Style: Fixed imggoing out of bounds

--- a/src/Components/ProductPage/ProductDisplay/product.display.css
+++ b/src/Components/ProductPage/ProductDisplay/product.display.css
@@ -6,7 +6,7 @@
 }
 
 .display {
-    height: 800px;
+    height: 900px;
     width: 68%;
     
     background-size: cover;
